@@ -27,17 +27,10 @@ char* getenv(const char* name);
 #  define TRUE (!FALSE)
 #endif /* TRUE */
 
-int cgi_header_flag = FALSE;
-
-/* cgi_html_header(outp)
+/*
+ * Please set TRUE to this variable if you write out the content header.
  */
-void
-cgi_html_header(FILE *outp)
-{
-  fputs("Content-type: text/html\r\n\r\n", outp);
-  fflush(outp);
-  cgi_header_flag = TRUE;
-}
+int cgi_header_flag = FALSE;
 
 /* cgi_error(fmt, ...) - print a warning message and exit the program.
  */
@@ -53,12 +46,11 @@ void cgi_error(const char *fmt, ...)
   if (iscgi && !cgi_header_flag) {
     fputs("Content-type: text/html\r\n\r\n", stdout);
     fputs("<html><body><p>", stdout);
-    cgi_header_flag = TRUE;
   }
   fprintf(fp, "%s: ", cgi_prog);
   if (cgi_file) fprintf(fp, "%s: ", cgi_file);
   vfprintf(fp, fmt, ap);
-  if (cgi_header_flag) fputs("</p></body></html>\n", stdout);
+  if (iscgi) fputs("</p></body></html>\n", stdout);
   exit(iscgi ? EXIT_SUCCESS : EXIT_FAILURE);
 }
 /* end of misc.c */
